--- a/core/model/BUILD.bazel
+++ b/core/model/BUILD.bazel
@@ -3,8 +3,8 @@ load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
 kt_android_library(
     name = "core_lib_model",
     srcs = glob(["src/main/java/**/*.kt"]),
-    manifest = "src/main/AndroidManifest.xml",
-    resource_files = glob(["src/main/res/**"]),
+    # manifest = "src/main/AndroidManifest.xml",
+    # resource_files = glob(["src/main/res/**"]),
     deps = [
         "@maven//:androidx_activity_activity_ktx",
         "@maven//:androidx_core_core_ktx",
